--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
     "passport-mixer": "^1.0.2"
