--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
