--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "Team Crowbar",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^0.3.1",
     "concurrently": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "helmet": "^3.21.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
     "passport-mixer": "^1.0.2"
