--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-dropzone": "^10.1.10",
+    "react-dropzone-uploader": "^2.11.0",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
