--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "node-sass": "^4.13.0",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-bootstrap-table-next": "^3.3.1",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-dom": "^16.11.0",
     "react-dropzone-uploader": "^2.11.0",
     "react-fontawesome": "^1.7.1",
