--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
-    "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-table-next": "^3.3.1",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-dom": "^16.11.0",
