--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.3.1",
+    "decko": "^1.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
@@ -44,5 +45,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
   }
 }
