--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "bootswatch": "^4.3.1",
     "decko": "^1.2.0",
     "font-awesome": "^4.7.0",
+    "immer": "^5.0.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
